--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -1,4 +1,4 @@
-<div class="sidebar bg-secondary">
+<div class="sidebar bg-secondary position-fixed">
 	<div class="list-group ml-2 mr-2">
 		<li class="list-group-item bg-dark text-white mb-2 rounded-0"><h3 class="font-weight-bold text-uppercase py-0 mb-0">Dashboard</h3></li>
 		<a class="list-group-item list-group-item-action" href="{% url 'reservations' %}">Bookings</a>
