--- a/reservations/templates/reservation_edit.html
+++ b/reservations/templates/reservation_edit.html
@@ -8,7 +8,7 @@
 		 	<div class="container main-height d-flex align-items-center justify-content-center">
 		 		<div class="card w-75">
 		 			<div class="card-body new-res">
-			 			<h2 class="text-center font-weight-bold font-italic">Create New Reservation</h2>
+			 			<h2 class="text-center font-weight-bold font-italic">Edit Reservation</h2>
 		 				<form method="POST" novalidate>
 		 					{% csrf_token %}
 
