--- a/reservations/templates/rooms.html
+++ b/reservations/templates/rooms.html
@@ -28,21 +28,28 @@
 								<th class="text-center font-italic" scope="col">Room Number</th>
 								<th class="font-italic" scope="col">Room Type</th>
 								<th class="text-center font-italic" scope="col">Description</th>
+								<th class="text-center font-italic" scope="col">Booked</th>
+								<th class="text-center font-italic" scope="col">Status</th>
+								<th class="text-center font-italic" scope="col">Damaged</th>
 								<th class="font-italic" scope="col">Updated On</th>
-								<th class="font-italic" scope="col">Action</th>
+								<th class="font-italic text-center" scope="col">Action</th>
 							</tr>
 						</thead>
 						<tbody>
 							{% for room in rooms %}
 								<tr>
 									<td scope="row">{{ forloop.counter }}</td>
-									<td class="text-center font-weight-bold font-italic">{{ room.room_number }}</td>
+									<td class="text-center font-weight-bold font-italic text-white {%if room.is_booked %}bg-success{%else%}bg-danger{%endif%}">{{ room.room_number }}</td>
 									<td class="text-capitalize font-italic">{{ room.room_type }}</td>
 									<td class="{% if not room.description %}text-center font-weight-bold {% endif %} text-capitalize">{% if not room.description  %} - {% else %} {{ room.description|truncatechars:40 }} {% endif %}</td>
+									<td>{{ room.is_booked }}</td>
+									<td class="text-capitalize">{{ room.status }}</td>
+									<td>{{ room.has_damages }}</td>
 									<td>{{ room.updated_at }}</td>
-									<td>
-										<a href="{% url 'edit_room' room.pk %}" class="btn btn-info">Edit</a>
-										<a href="{% url 'delete_room' room.pk %}" class="btn btn-danger">Delete</a>
+									<td class="text-center">
+										<a href="{% url 'view_room' room.pk %}" class="btn btn-info btn-sm">View</a>
+										<a href="{% url 'edit_room' room.pk %}" class="btn btn-warning btn-sm">Edit</a>
+										<a href="{% url 'delete_room' room.pk %}" class="btn btn-danger btn-sm">Delete</a>
 									</td>
 								</tr>
 							{% endfor %}
