--- a/reservations/templates/reservations.html
+++ b/reservations/templates/reservations.html
@@ -9,7 +9,7 @@
 	    <div class="card-body main-height px-2">
 			<div class="shadow-none mb-3 rounded breadcrumb">
 				<ul class="list-unstyled mb-0">
-					<li class="d-inline-block"><h3>Reservations</h3></li>
+					<li class="d-inline-block text-primary"><h3>Reservations</h3></li>
 					<li class="d-inline-block ml-5"><a href="{% url 'new_reservation' %}" class="btn btn-primary">New</a></li>
 				</ul>
 			</div>
