--- a/reservations/templates/room_forms.html
+++ b/reservations/templates/room_forms.html
@@ -8,7 +8,7 @@
 		 	<div class="container main-height d-flex align-items-center justify-content-center">
 		    	<div class="card w-75">
 		    		<div class="card-body new-res">
-		    			<h2 class="text-center font-weight-bold font-italic">Add New Hotel Room</h2>
+		    			<h2 class="text-center font-weight-bold font-italic text-primary">Add New Hotel Room</h2>
 		    			<form method="POST" novalidate>
 							{% csrf_token %}
 
