--- a/reservations/templates/reservations.html
+++ b/reservations/templates/reservations.html
@@ -42,15 +42,15 @@
 							{% for reservation in reservations %}
 								<tr>
 									<td scope="row">{{ forloop.counter }}</td>
-									<td>
-										<a href="{% url 'view_room' reservation.room.pk %}"><strong>Room {{ reservation.room.room_number }}</strong></a>
+									<td class="font-italic">
+										<a href="{% url 'view_room' reservation.room.pk %}">Room {{ reservation.room.room_number }}</a>
 									</td>
-									<td class="text-capitalize">
+									<td class="text-capitalize font-italic">
 										<a href="{% url 'view_customer' reservation.customer.pk %}">{{ reservation.customer }}</a>
 									</td>
 									<td>{{ reservation.nights }}</td>
-									<td>{{ reservation.check_in|date:"Y-m-d" }}</td>
-									<td>{{ reservation.check_out|date:"Y-m-d" }}</td>
+									<td class="font-italic">{{ reservation.check_in|date:"Y-m-d" }}</td>
+									<td class="font-italic">{{ reservation.check_out|date:"Y-m-d" }}</td>
 									<td>
 										{% if reservation.is_active %}
 											<span class="bg-success text-white py-1 px-2">Active</span>
@@ -58,9 +58,9 @@
 											<span class="bg-danger text-white py-1 px-2">Closed</span>
 										{% endif %}
 									</td>
-									<td>{{ reservation.room.price }}</td>
-									<td class="text-capitalize">{{ reservation.payment }}</td>
-									<td>{{ reservation.updated_at|date:"Y-m-d H:i" }}</td>
+									<td class="font-italic">{{ reservation.room.price }}</td>
+									<td class="text-capitalize font-italic">{{ reservation.payment }}</td>
+									<td class="font-italic">{{ reservation.updated_at|date:"Y-m-d H:i" }}</td>
 									<td>
 										<a href="{% url 'view_reservation' reservation.pk %}" class="btn btn-info btn-sm">View</a>
 										<a href="{% url 'edit_reservation' reservation.pk %}" class="btn btn-warning btn-sm">Edit</a>
