--- a/reservations/templates/reservations.html
+++ b/reservations/templates/reservations.html
@@ -11,6 +11,8 @@
 				<ul class="list-unstyled mb-0">
 					<li class="d-inline-block text-primary"><h3>Reservations</h3></li>
 					<li class="d-inline-block ml-5"><a href="{% url 'new_reservation' %}" class="btn btn-primary">New</a></li>
+					<li class="d-inline-block ml-5"><a href="{% url 'view_pdf' %}" class="btn btn-secondary">View PDF</a></li>
+					<li class="d-inline-block ml-5"><a href="{% url 'export_users_csv' %}" class="btn btn-secondary">Export to CSV</a></li>
 				</ul>
 			</div>
 			<div class="table-responsive">
