--- a/accounts/templates/base_accounts.html
+++ b/accounts/templates/base_accounts.html
@@ -1,7 +1,20 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
+{% block stylesheet %}
+	<link rel="stylesheet" href="{% static 'css/accounts.css' %}">
+{% endblock %}
 
 {% block body %}
-    {{ msg }}
-{% endblock body %}
+	<div class="container">
+		<h1 class="text-center logo my-4">
+			<a href="{% url 'home' %}">Tamaya System</a>
+		</h1>
+
+		{% block content %}
+
+		{% endblock content %}
+	</div>
+{% endblock %}
     
