--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 
     {% block stylesheet %} {% endblock stylesheet %}
     
-    <title>Tamaya {% block title %} {% endblock title %} </title>
+    <title>{% block title %} {% endblock title %} </title>
 </head>
 <body>
     
