--- a/templates/nav.html
+++ b/templates/nav.html
@@ -4,18 +4,25 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto mr-3">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    John Doe
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Change Password</a>
-                    <a class="dropdown-item" href="#">View Profile</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Log Out</a>
-                </div>
-            </li>
-        </ul>
+        {% if user.is_authenticated %}
+            <ul class="navbar-nav ml-auto mr-3">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        {{ user.username }}
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="{% url 'password_change' %}">Change Password</a>
+                        <a class="dropdown-item" href="#">View Profile</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{% url 'logout' %}">Log Out</a>
+                    </div>
+                </li>
+            </ul>
+        {% else %}
+            <form class="form-inline ml-auto mr-5">
+                <a href="{% url 'login' %}" class="btn btn-secondary mr-3">Log in</a>
+                <a href="{% url 'signup' %}" class="btn btn-dark ml-2">Sign up</a>
+            </form>
+        {% endif %}
     </div>
 </nav>
